# specimen

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile.dev  Procfile.prod  _template.ipynb  alembic.ini  api.py  docker-compose.yml  first.ipynb  justfile  model.py  pyproject.toml
alembic/: env.py
alembic/versions/: 85dad405d786_.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
