[project]
name = "workdir"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.115.0",
    "frozendict>=2.4.6",
    "frozenlist>=1.7.0",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "jq>=1.10.0",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "regex>=2025.8.29",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sortedcontainers>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]